# vod2pod-rss

./: .dev.env  .env  .gitignore  .markdownlint.json  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.yaml  docker-compose.dev_enviroment.yml  docker-compose.yml  requirements.txt  set_version.sh
.cargo/: config.toml
.devcontainer/: PostCreateScript.sh  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: generic-issue-report.md
.github/workflows/: bump_minor_version.yml  docker-image-beta.yml  docker-image.yml  remove_dev_deps_and_version.sh  rust-clippy.yml  rust.yml
dev-enviroment/: docker-compose.yml
dev-enviroment/local/: start_tmux.sh
docker/: Dockerfile  docker-compose.dev_env.yml
src/: lib.rs  main.rs
src/configs/: mod.rs
src/feed_url/: mod.rs
src/provider/: generic.rs  macros.rs  mod.rs  peertube.rs  rumble.rs  twitch.rs  youtube.rs
src/rss_parser/: mod.rs
src/rss_transcodizer/: mod.rs
src/rss_transcodizer/sample_rss/: podcast.rss  twitch.rss  youtube.rss
src/server/: mod.rs
src/streams/: mod.rs
src/transcoder/: mod.rs
src/transcoder/remuxer/: mod.rs
src/url_convert/: mod.rs
templates/: index.html  index_redesign.html
tests/: health_test.rs  integration_tests.rs
