[package]
authors = ["madiele92@gmail.com"]
edition = "2021"
name = "vod2pod-rss"
version = "1.2.5"

[lib]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
actix-rt = "=2.10.0"
google-youtube3 = "=5.0.4"
actix-web = "=4.11.0"
async-trait = "=0.1.88"
url = { version="=2.5.4", features = ["serde"]}
futures = "=0.3.31"
log = "=0.4.27"
regex = "=1.11.1"
reqwest = { version = "=0.12.22", features = ["json"] }
serde = "=1.0.219"
serde_json = "=1.0.142"
tokio = { version = "=1.47.1", features = ["macros", "process"]}
uuid = { version= "=1.17.0", features = ["v4", "serde"]}
genawaiter = {version = "=0.99", features = ["futures03"] }
openssl = { version = "*", features = ["vendored"] } #this is here just to make cross-compiling work during github actions
rss = { version = "=2.0", features = ["serde"] }
eyre = "=0.6"
simple_logger = "=5.0"
redis = { version = "=0.32", features = ["tokio-comp"] }
mime = "=0.3.17"
cached = { version = "=0.56.0", features = ["redis_tokio"] }
iso8601-duration = "=0.2.0"
chrono = "=0.4.41"
feed-rs = "=2.3.1"

[dev-dependencies]
temp-env ={ version = "=0.3.6", features = ["async_closure"] }
env_logger = "*"
test-log = "0.2.11"
