[package]
authors = ["madiele92@gmail.com"]
edition = "2021"
name = "vod2pod-rss"
version = "1.2.5"

[lib]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
actix-rt = "=2.11.0"
google-youtube3 = "=5.0.4"
actix-web = "=4.12.1"
async-trait = "=0.1.89"
url = { version="=2.5.7", features = ["serde"]}
futures = "=0.3.31"
log = "=0.4.29"
regex = "=1.12.2"
reqwest = { version = "=0.12.28", features = ["json"] }
serde = "=1.0.228"
serde_json = "=1.0.148"
tokio = { version = "=1.48.0", features = ["macros", "process"]}
uuid = { version= "=1.19.0", features = ["v4", "serde"]}
genawaiter = {version = "=0.99", features = ["futures03"] }
openssl = { version = "*", features = ["vendored"] } #this is here just to make cross-compiling work during github actions
rss = { version = "=2.0", features = ["serde"] }
eyre = "=0.6"
simple_logger = "=5.1"
redis = { version = "=1.0", features = ["tokio-comp"] }
mime = "=0.3.17"
cached = { version = "=0.56.0", features = ["redis_tokio"] }
iso8601-duration = "=0.2.0"
chrono = "=0.4.42"
feed-rs = "=2.3.1"

[dev-dependencies]
temp-env ={ version = "=0.3.6", features = ["async_closure"] }
env_logger = "*"
test-log = "0.2.11"
